Changing to repo-level directory for `src` folder.

--- a/action.yml
+++ b/action.yml
@@ -25,5 +25,7 @@ runs:
       shell: bash
     - name: Fetch the number's square
       id: get-square
-      run: python src/get_num_square.py
+      run: |
+        cd ..
+        python src/get_num_square.py
       shell: bash
